--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -1,62 +1,40 @@
-/****************************************************************************
- JSCommunicator
- http://jscommunicator.org
-
- Copyright (C) 2013  Daniel Pocock http://danielpocock.com
-
- The JavaScript code in this page is free software: you can
- redistribute it and/or modify it under the terms of the GNU
- General Public License (GNU GPL) as published by the Free Software
- Foundation, either version 2 of the License, or (at your option)
- any later version.  The code is distributed WITHOUT ANY WARRANTY;
- without even the implied warranty of MERCHANTABILITY or FITNESS
- FOR A PARTICULAR PURPOSE.  See the GNU GPL for more details.
-
- You may distribute non-source (e.g., minimized or compacted) forms of
- that code without the full copy of the GNU GPL normally required
- provided you include this license notice and a URL
- through which recipients can access the Corresponding Source.
-****************************************************************************/
-
-#network-controls #error span {
+#error span {
   display: none;
 }
 
-#network-controls #error #js {
+#error #js {
   display: inline;
 }
 
 #network-controls #jsc-login {
   display: none;
+  clear:both;
 }
 
 #network-controls #jsc-login .jsc-login-label {
   float: left;
-  width: 200px;
+  width: 230px;
+  height:auto;
 }
 
-#network-controls #ws {
+#encapsulate #ws {
   display: none;
 }
 
-#network-controls #ws .state {
+#encapsulate #reg {
   display: none;
 }
 
-#network-controls #reg {
-  display: none;
-}
-
-#network-controls #reg #de-reg-button {
+#encapsulate #reg #de-reg-button {
   display: none;
 }
 
 #dest {
-  display: none;
+  float:left;
 }
 
-#dial-controls {
-  display: none;
+#dialing-actions {
+  float:right;
 }
 
 #session-controls {
@@ -90,112 +68,78 @@
   background-color: #111;
   border-top: 2px solid #CCC;
   border-right: 2px solid #CCC;
-}
-#encapsulate {
-  width: 360px;
-}
-
-#encapsulate input{
- float:right;
-}
-
-#jsc-login-button,#ws,#dialing-actions {
- clear:both;
-}
-
-#dial-controls {
- margin-top: 5px;
-}
-
-#tabs {
-  background-color:#F0F0F0;
-  border-radius: 4px;
   padding: 5px;
-  margin-top: 3px;
+}
+
+#network-controls input{
+float:right;
+}
+
+#jsc-login-button,#ws{
+clear:both;
+}
+
+#chat {
+  padding: 5px;
+  clear:both;
+  min-height: 70px;
 }
 
 .tab-label{
-  margin:0 5px 0 0;
-  padding:7px 10px;
+  margin:6px 3px 0 0;
+  padding:5px;
   display:block;
   float:left;
-  background-color:#D8D8D8;
-  border-top-left-radius:2px;
-  border-top-right-radius:2px;
+  background-color:#C1C1C1;
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+  font: -webkit-small-control;
+  width: 42px;
+  overflow: hidden;
 }
 
-#tabs > ul {
+#chat > ul {
   padding: 0px;
   margin: 0px;
 }
 
-.tab-page {
-  clear:both;
-  background-color:#FFF;
-  padding: 5px;
-  overflow: hidden;
-}
-
 .active-tab {
-  background-color:#FFF;
-}
-
-#session-actions {
-  clear:both;
-}
-
-#dtmf-pad {
-  clear:both;
-}     
-
-#dtmf-pad > input {
- float: none;
- width: 25px;
-}
-
-
-#dialing-actions {
-  float:left;
-}
+  background-color:#F0F0F0;
+}   
 
 /* adapted from try.jssip.net */
 
-#tab-2 .chatSession {
+.chatSession {
   display: block;
   float: left;
-  position: relative;
   background-color:#F0F0F0;
   border-radius: 0 10px 10px 0;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  width: 338px;
 }
 
-#tab-2 .chatSession .close {
+.chatSession .close {
   float: right;
-  color: red;
+  color: darkred;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   cursor: pointer;
   margin-right: 4px;
+  font-size: 12px;
 }
 
-#tab-2 .chatSession .peer span {
+.chatSession .peer span {
   font-size: 12px;
+  font-weight: bold;
   color: #555;
 }
 
-#tab-2 .chatSession .peer span.display-name {
-  font-size: 14px;
-  font-weight: bold;
-  color: #333;
-  margin-right: 5px;
-}
-
-#tab-2 .chatSession .chat {
+.chatSession .chat {
   position: relative;
   margin-top: 10px;
 }
 
-#tab-2 .chatSession .chat .chatting {
+.chatSession .chat .chatting {
   position: relative;
   background: #FFF;
   padding: 5px;
@@ -206,7 +150,7 @@
   border: 1px solid #CCC;
 }
 
-#tab-2 .chatSession .chat .iscomposing {
+.chatSession .chat .iscomposing {
   position: absolute;
   /* background: url("../images/iscomposing2.gif") no-repeat;*/
   width: 26px;
@@ -217,39 +161,40 @@
   display: none;
 }
 
-#tab-2 .chatSession .chat .chatting p {
+.chatSession .chat .chatting p {
   font-size: inherit;
   margin: 0px;
   font-family: sans-serif;
 }
 
-#tab-2 .chatSession .chat .chatting p.me {
+.chatSession .chat .chatting p.me {
   color: #444;
 }
 
-#tab-2 .chatSession .chat .chatting p.peer {
+.chatSession .chat .chatting p.peer {
   color: #008F00;
 }
 
-#tab-2 .chatSession .chat .chatting p.error {
+.chatSession .chat .chatting p.error {
   color: red;
 }
 
-#tab-2 .chatSession .chat input[type="text"] {
+.chatSession .chat input[type="text"] {
+  position: relative;
   margin: 5px 0 0 0;
   display: block;
   line-height: 24px;
   height: 24px;
   border: 1px solid #CCC;
   border-radius: 0 0 5px 0;
-  width: 278px;
   font-size: 12px;
   text-indent: 5px;
   color: #000;
   font-style: normal;
+  width: 334px
 }
 
-#tab-2 .chatSession .chat input[type="text"].inactive {
+.chatSession .chat input[type="text"].inactive {
   color: #888;
   font-style: italic;
 }
@@ -258,23 +203,146 @@
 
 #new-chat {
   display: block;
-  float: left;
   margin-top: 3px;
-  margin-bottom: 10px;
 }
 
-#new-chat input[type="text"] {
-  font-family: sans-serif;
-}
-
-#chat-error {
-  height: 24px;
-  color: red;
+.no-contact {
+  color: darkred;
   font-style: italic;
   font-family: sans-serif;
   font-size: 12px;
-  margin-bottom: 5px;
+  display: block;
 }
+
+
+
+#dtmf-pad input{
+  float:left;
+  width: 25px;
+  margin: 2px;
+}
+
+#dtmf-pad br{
+  clear:both;
+}
+
+#jsc-login-option input{
+  float:left;
+}
+
+#jsc-login-option {
+  clear:both;
+}
+
+#encapsulate {
+  width: 360px;
+  padding: 3px;
+}
+
+#call {
+  height: 64px;
+  padding: 5px;
+  clear:both;
+}
+
+#error span, #ws span, #reg span {
+  font: -webkit-small-control;
+  letter-spacing: normal;
+}
+
+#header {
+  height: 100px;
+}
+
+#header h1 {
+  font-family: Arial;
+  font-weight: normal;
+  margin:0;
+  display: block;
+}
+
+#jsc-logout-button {
+  float:right;
+  margin: 3px;
+}
+
+#welcome {
+  display: inline;
+}
+
+h3 {
+  font-family: Arial;
+  font-weight: normal;
+  margin:0;
+  margin-top: 5px;
+}
+
+hr {
+  margin:6px;
+  margin-bottom: 0px;
+}
+
+span {
+  font-family: Arial;
+  font-size: 14px;
+  margin-left: 3px;
+}
+
+#peer {
+  font-family: Arial;
+  font-size: 14px;
+  margin-left: 3px;
+  display: inline;
+  float: left;
+}
+
+.red-phone {
+  -webkit-transform:rotate(135deg);
+  -moz-transform:rotate(135deg);
+  -o-transform:rotate(135deg);
+  color:red;
+}
+
+#lang_selection {
+  float:left;
+  display: inline;
+  margin-bottom: 8px;
+}
+
+#jsc-login-option {
+  float:right;
+}
+
+#communicator {
+  clear: both;
+  overflow: hidden;
+}
+
+#dtmf-pad {
+  z-index: 200;
+  position: absolute;
+  top: 72px;
+  left: 244px;
+  display: none;
+}
+
+#session-actions {
+  float: right;
+}
+
+#start-chat {
+  float:right;
+}
+
+#chat-error, #call-info {
+  height: 12px;
+  margin-bottom: 4px;
+}
+
+#chat-error span, #call-info span{
+  display: none;
+}
+
 
 
 
